# magic-modules

./: BUILD.bazel  MODULE.bazel
build_defs/: go.bzl  product.bzl
mmv1/: go.mod  go.sum
mmv1/cmd/: BUILD.bazel  main.go
mmv1/loader/: BUILD.bazel
mmv1/products/cloudbuild/: GitLabConfig.yaml
mmv1/templates/terraform/examples/: cloudbuild_gitlab_config.tf.tmpl
tpgtools/: go.mod  go.sum
