load("@gazelle//:def.bzl", "gazelle")

# gazelle:exclude .ci
# gazelle:exclude .github
# gazelle:exclude docs
# gazelle:exclude mmv1/products
# gazelle:exclude mmv1/templates
# gazelle:exclude mmv1/third_party/cai2hcl
# gazelle:exclude mmv1/third_party/tgc
# gazelle:exclude mmv1/third_party/tgc_next
# gazelle:exclude mmv1/third_party/terraform/.teamcity
# gazelle:exclude mmv1/third_party/terraform/functions
# gazelle:exclude mmv1/third_party/terraform/fwmodels
# gazelle:exclude mmv1/third_party/terraform/fwprovider
# gazelle:exclude mmv1/third_party/terraform/fwresource
# gazelle:exclude mmv1/third_party/terraform/fwtransport
# gazelle:exclude mmv1/third_party/terraform/fwutils
# gazelle:exclude mmv1/third_party/terraform/fwvalidators
# gazelle:exclude mmv1/third_party/terraform/META.d
# gazelle:exclude mmv1/third_party/terraform/provider
# gazelle:exclude mmv1/third_party/terraform/registry
# gazelle:exclude mmv1/third_party/terraform/scripts
# gazelle:exclude mmv1/third_party/terraform/services
# gazelle:exclude mmv1/third_party/terraform/sweeper
# gazelle:exclude mmv1/third_party/terraform/test-fixtures
# gazelle:exclude mmv1/third_party/terraform/tpgdclresource
# gazelle:exclude mmv1/third_party/terraform/tpgiamresource
# gazelle:exclude mmv1/third_party/terraform/tpgresource
# gazelle:exclude mmv1/third_party/terraform/transport
# gazelle:exclude mmv1/third_party/terraform/version
# gazelle:exclude mmv1/third_party/terraform/verify
# gazelle:exclude mmv1/third_party/terraform/website
# gazelle:exclude scripts
# gazelle:exclude tools
# gazelle:exclude tpgtools/ignored_handwritten
# gazelle:exclude tpgtools/serializable
# gazelle:prefix github.com/GoogleCloudPlatform/magic-modules
gazelle(name = "gazelle")
