bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/hashicorp/terraform-plugin-go",
)
use_repo(
    go_deps,
    "com_github_apparentlymart_go_cidr",
    "com_github_cenkalti_backoff",
    "com_github_davecgh_go_spew",
    "com_github_dnaeon_go_vcr",
    "com_github_gammazero_workerpool",
    "com_github_getkin_kin_openapi",
    "com_github_golang_glog",
    "com_github_google_go_cmp",
    "com_github_google_go_cpy",
    "com_github_googlecloudplatform_declarative_resource_client_library",
    "com_github_grpc_ecosystem_go_grpc_middleware",
    "com_github_hashicorp_errwrap",
    "com_github_hashicorp_go_cleanhttp",
    "com_github_hashicorp_go_cty",
    "com_github_hashicorp_go_version",
    "com_github_hashicorp_hcl",
    "com_github_hashicorp_terraform_json",
    "com_github_hashicorp_terraform_plugin_framework",
    "com_github_hashicorp_terraform_plugin_framework_timeouts",
    "com_github_hashicorp_terraform_plugin_framework_validators",
    "com_github_hashicorp_terraform_plugin_go",
    "com_github_hashicorp_terraform_plugin_log",
    "com_github_hashicorp_terraform_plugin_mux",
    "com_github_hashicorp_terraform_plugin_sdk_v2",
    "com_github_hashicorp_terraform_plugin_testing",
    "com_github_kylelemons_godebug",
    "com_github_mitchellh_go_homedir",
    "com_github_mitchellh_hashstructure",
    "com_github_nasa9084_go_openapi",
    "com_github_otiai10_copy",
    "com_github_sirupsen_logrus",
    "com_github_stretchr_testify",
    "com_google_cloud_go_auth",
    "com_google_cloud_go_auth_oauth2adapt",
    "com_google_cloud_go_bigquery",
    "com_google_cloud_go_bigtable",
    "in_gopkg_yaml_v2",
    "in_gopkg_yaml_v3",
    "org_bitbucket_creachadair_stringset",
    "org_go4_netipx",
    "org_golang_google_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_oauth2",
)
